--- a/EDD2_Proyecto_/nbproject/project.properties
+++ b/EDD2_Proyecto_/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=EDD2_Proyecto_
-main.class=edd2_proyecto_.EDD2_Proyecto_
+main.class=edd2_proyecto_.Ventana_Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
