--- a/EDD2_Proyecto_/nbproject/project.properties
+++ b/EDD2_Proyecto_/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=EDD2_Proyecto_
+application.vendor=Workstation DSY
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,10 +33,21 @@ dist.jar=${dist.dir}/EDD2_Proyecto_.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/EDD2_Proyecto_
+endorsed.classpath=
 excludes=
+file.reference.poi-4.1.2.jar=lib\\poi-4.1.2.jar
+file.reference.poi-ooxml-4.1.2.jar=lib\\poi-ooxml-4.1.2.jar
+file.reference.poi-ooxml-schemas-4.1.2.jar=lib\\poi-ooxml-schemas-4.1.2.jar
+file.reference.poi-src-4.1.2-20200217.zip=poi-src-4.1.2-20200217.zip
+file.reference.xmlbeans-3.1.0.jar=lib\\xmlbeans-3.1.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.poi-src-4.1.2-20200217.zip}:\
+    ${file.reference.poi-4.1.2.jar}:\
+    ${file.reference.poi-ooxml-4.1.2.jar}:\
+    ${file.reference.poi-ooxml-schemas-4.1.2.jar}:\
+    ${file.reference.xmlbeans-3.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
